--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>react-quiz</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>Quiz Simulation</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="flex items-center justify-center h-screen bg-gray-800">
+    <div id="root" class="flex-row flex items-center justify-center"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
